--- a/CNNs for feature extraction/4mh23cs023.md
+++ b/CNNs for feature extraction/4mh23cs023.md
@@ -36,7 +36,7 @@ To visualize CNN features, you can use libraries such as Matplotlib in Python to
 ```pythonimport matplotlib.pyplot as plt
 import numpy as np  
 
-# What happens if you remove pooling layers?
+What happens if you remove pooling layers?
 If you remove pooling layers from a CNN, the network will retain more spatial information from the input data, which can lead to several consequences:
 1. Increased Computational Load: Without pooling layers, the feature maps will have larger spatial dimensions, which can significantly increase the computational load and memory usage of the network, especially as the depth of the network increases.
 2. Overfitting: The absence of pooling layers can lead to overfitting, as the network may learn to memorize the training data instead of generalizing to unseen data. Pooling helps to reduce the number of parameters and the spatial size of the feature maps, which can help to prevent overfitting.
